test/sema/floating-point-bitwise-operation.delta.output
floating-point-bitwise-operation.delta:5:17: error: invalid operands 'float' and 'float' to '&'
    var a = 5.0 & 2.0;
                ^
