test/sema/floating-point-bitwise-operation.delta
// RUN: %check_errors %not %delta -typecheck %s

void main() {
    // CHECK: [[@LINE+1]]:17: error: invalid operands 'float' and 'float' to '&'
    var a = 5.0 & 2.0;
}
